discussion/kv_engine/128645/128645_rev9_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39042: Introduce PrometheusStatistics

PrometheusStatistics encapsulates a prometheus-cpp Exposer.

On incoming scrape requests, a PrometheusStatCollector instance will be
used to gather stats, reusing some of the infrastructure used by
CMD_STAT.

TODO: Get interface/port ipv4/6 from ns_server
TODO: Split into two endpoints once upstream changes are approved
TODO: Tie in auth once upstream changes are approved

Change-Id: I2c46729bb102d360dedc268b0fd26d935c654dcb

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-05-27 15:06:42.000000000
Message: 
Uploaded patch set 9: Patch Set 8 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-27 15:11:04.000000000
Message: 
Patch Set 9: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2445/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/prometheus_collector.h:22:10: error: "prometheus/client_metric.h" file not found [clang-diagnostic-error]
#include <prometheus/client_metric.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:174:34: error: use of undeclared identifier "num_ops" [clang-diagnostic-error]
STAT(ep_num_ops_get_meta, count, num_ops, {{"op", "get_meta"}})
                                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2445/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/prometheus_collector.h:22:10:
error: "prometheus/client_metric.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2445/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24283/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/statistics/stats.def.h:174:34:
error: use of undeclared identifier "num_ops"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24283/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/961/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
